@@ -2,7 +2,7 @@
 Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 Copyright (C) 2004-14 Christian Franke <smartmontools-support@lists.sourceforge.net>
 
-$Id: smartd.conf.5.in 3964 2014-07-19 19:59:51Z chrfranke $
+$Id: smartd.conf.5.in 3965 2014-07-20 14:46:41Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -79,8 +79,8 @@ non-whitespace or non-comment item on a line.
 Note: a line whose first character is a hash sign \'#\' is treated as
 a white-space blank line, \fBnot\fP as a non-existent line, and will
 \fBend\fP a continuation line.
-.PP 0
-.fi
+.PP
+
 Here is an example configuration file.  It\'s for illustrative purposes
 only; please don\'t copy it onto your system without reading to the end
 of the
@@ -99,7 +99,6 @@ Section below!
 .B # device, four SATA disks connected to an Areca
 .B # RAID controller, and one SATA disk.
 .B #
-.nf
 .B # First ATA disk on two different interfaces. On
 .B # the second disk, start a long self-test every
 .B # Sunday between 3 and 4 am.
@@ -107,19 +106,16 @@ Section below!
 .B \ \ /dev/hda -a -m admin@example.com,root@localhost 
 .B \ \ /dev/hdc -a -I 194 -I 5 -i 12 -s L/../../7/03
 .B #
-.nf
 .B # SCSI disks.  Send a TEST warning email to admin on
 .B # startup.
 .B #
 .B \ \ /dev/sda
 .B \ \ /dev/sdb -m admin@example.com -M test
 .B #
-.nf
 .B # Strange device.  It\'s SCSI. Start a scheduled
 .B # long self test between 5 and 6 am Monday/Thursday
 .B \ \ /dev/weird -d scsi -s L/../../(1|4)/05
 .B #
-.nf
 .B # An ATA disk may appear as a SCSI device to the
 .B # OS. If a SCSI to ATA Translation (SAT) layer
 .B # is between the OS and the device then this can be
@@ -128,7 +124,6 @@ Section below!
 .B # environments.
 .B \ \ /dev/sda -a -d sat
 .B #
-.nf
 .\" %IF OS Linux
 .B # Three disks connected to a MegaRAID controller
 .B # Start short self-tests daily between 1-2, 2-3, and
@@ -137,18 +132,14 @@ Section below!
 .B \ \ /dev/sda -d megaraid,1 -a -s S/../.././02
 .B \ \ /dev/sda -d megaraid,2 -a -s S/../.././03
 .B \ \ /dev/bus/0 -d megaraid,2 -a -s S/../.././03
-.B
 .B #
-.nf
 .B # Three disks connected to an AacRaid controller
 .B # Start short self-tests daily between 1-2, 2-3, and
 .B # 3-4 am.
 .B \ \ /dev/sda -d aacraid,0,0,66 -a -s S/../.././01
 .B \ \ /dev/sda -d aacraid,0,0,67 -a -s S/../.././02
 .B \ \ /dev/sda -d aacraid,0,0,68 -a -s S/../.././03
-.B
 .B #
-.nf
 .\" %ENDIF OS Linux
 .B # Four ATA disks on a 3ware 6/7/8000 controller.
 .B # Start short self-tests daily between midnight and 1am,
@@ -161,14 +152,12 @@ Section below!
 .B \ \ /dev/sdd -d 3ware,2 -a -s S/../.././02
 .B \ \ /dev/sdd -d 3ware,3 -a -s S/../.././03
 .B #
-.nf
 .B # Two ATA disks on a 3ware 9000 controller.
 .B # Start long self-tests Sundays between midnight and
 .B # 1am and 2-3 am
 .B \ \ /dev/twa0 -d 3ware,0 -a -s L/../../7/00
 .B \ \ /dev/twa0 -d 3ware,1 -a -s L/../../7/02
 .B #
-.nf
 .B # Two SATA (not SAS) disks on a 3ware 9750 controller.
 .B # Start long self-tests Sundays between midnight and
 .B # 1am and 2-3 am
@@ -181,7 +170,6 @@ Section below!
 .B \ \ /dev/tws0 -d 3ware,1 -a -s L/../../7/02
 .\" %ENDIF OS FreeBSD
 .B #
-.nf
 .B # Three SATA disks on a HighPoint RocketRAID controller.
 .B # Start short self-tests daily between 1-2, 2-3, and
 .B # 3-4 am.
@@ -198,7 +186,6 @@ Section below!
 .B  /dev/hptrr -d hpt,1/3 -a -s S/../.././03
 .\" %ENDIF OS FreeBSD
 .B #
-.nf
 .B # Two SATA disks connected to a HighPoint RocketRAID 
 .B # via a pmport device.  Start long self-tests Sundays
 .B # between midnight and 1am and 2-3 am.
@@ -213,7 +200,6 @@ Section below!
 .B \ \ /dev/hptrr -d hpt,1/4/2 -a -s L/../../7/02
 .B #
 .\" %ENDIF OS FreeBSD
-.nf
 .B # Three SATA disks connected to an Areca
 .B # RAID controller. Start long self-tests Sundays
 .B # between midnight and 3 am.
@@ -228,7 +214,6 @@ Section below!
 .B \ \ /dev/arcmsr0 -d areca,3 -a -s L/../../7/02
 .\" %ENDIF OS FreeBSD
 .B #
-.nf
 .B # The following line enables monitoring of the 
 .B # ATA Error Log and the Self-Test Error Log.  
 .B # It also tracks changes in both Prefailure
@@ -245,10 +230,7 @@ Section below!
 .B ################################################
 .fi
 
-.PP 
 .SH CONFIGURATION FILE DIRECTIVES
-.PP
-
 If a non-comment entry in the configuration file is the text string
 .B DEVICESCAN
 in capital letters, then
@@ -264,9 +246,9 @@ If an entry in the configuration file starts with
 .B DEFAULT
 instead of a device name, then all directives in this entry are set
 as defaults for the next device entries.
-
+.PP
 This configuration:
-
+.PP
 .nf
 \ \ DEFAULT -a -R5! -W 2,40,45 -I 194 -s L/../../7/00 -m admin@example.com
 \ \ /dev/sda
@@ -276,9 +258,9 @@ This configuration:
 \ \ /dev/sdd
 \ \ /dev/sde -d removable
 .fi
-
+.PP
 has the same effect as:
-
+.PP
 .nf
 \ \ /dev/sda -a -R5! -W 2,40,45 -I 194 -s L/../../7/00 -m admin@example.com
 \ \ /dev/sdb -a -R5! -W 2,40,45 -I 194 -s L/../../7/00 -m admin@example.com
@@ -287,7 +269,7 @@ has the same effect as:
 \ \ /dev/sde -d removable -H -m admin@example.com
 .fi
 
-.sp 2
+
 The following are the Directives that may appear following the device
 name or
 .B DEVICESCAN
@@ -678,7 +660,6 @@ Values of 0 disable the feature, other values less than 65 are probably
 not supported.  For RAID configurations, this is typically set to
 70,70 deciseconds.
 [Please see the \fBsmartctl \-l scterc\fP command-line option.]
-
 .TP
 .B \-e NAME[,VALUE]
 Sets non-SMART device settings when \fBsmartd\fP starts up and has no
@@ -704,7 +685,6 @@ IDLE mode.
 
 .I wcache,[on|off]
 \- [ATA only] Sets the volatile write cache feature.
-
 .TP
 .B \-s REGEXP
 Run Self-Tests or Offline Immediate Tests, at scheduled times.  A
@@ -731,7 +711,6 @@ Some disks (e.g. WD) do not preserve the selective self test log accross
 power cycles.  If state persistence (\'\-s\' option) is enabled, the last
 test span is preserved by smartd and used if (and only if) the selective
 self test log is empty.
-
 .IP \fBMM\fP 4
 is the month of the year, expressed with two decimal digits.  The
 range is from 01 (January) to 12 (December) inclusive.  Do \fBnot\fP
@@ -1020,46 +999,33 @@ The string contains space characters and is NOT quoted.
 .IP \fBSMARTD_FAILTYPE\fP 4
 gives the reason for the warning or message email.  The possible values that
 it takes and their meanings are:
-.nf
-.fi
+.br
 \fIEmailTest\fP: this is an email test message.
-.nf
-.fi
+.br
 \fIHealth\fP: the SMART health status indicates imminent failure.
-.nf
-.fi
+.br
 \fIUsage\fP: a usage Attribute has failed.
-.nf
-.fi
+.br
 \fISelfTest\fP: the number of self-test failures has increased.
-.nf
-.fi
+.br
 \fIErrorCount\fP: the number of errors in the ATA error log has increased.
-.nf
-.fi
+.br
 \fICurrentPendingSector\fP: one of more disk sectors could not be
 read and are marked to be reallocated (replaced with spare sectors).
-.nf
-.fi
+.br
 \fIOfflineUncorrectableSector\fP: during off-line testing, or self-testing,
 one or more disk sectors could not be read.
-.nf
-.fi
+.br
 \fITemperature\fP: Temperature reached critical limit (see \-W directive).
-.nf
-.fi
+.br
 \fIFailedHealthCheck\fP: the SMART health status command failed.
-.nf
-.fi
+.br
 \fIFailedReadSmartData\fP: the command to read SMART Attribute data failed.
-.nf
-.fi
+.br
 \fIFailedReadSmartErrorLog\fP: the command to read the SMART error log failed.
-.nf
-.fi
+.br
 \fIFailedReadSmartSelfTestLog\fP: the command to read the SMART self-test log failed.
-.nf
-.fi
+.br
 \fIFailedOpenDevice\fP: the open() command to the device failed.
 .IP \fBSMARTD_ADDRESS\fP 4
 is determined by the address argument ADD of the \'\-m\' Directive.
@@ -1100,8 +1066,7 @@ the mailer or command exits.
 is a text string giving the time and date at which the first problem
 of this type was reported. This text string contains space characters
 and no newlines, and is NOT quoted. For example:
-.nf
-.fi
+.br
 Sun Feb  9 14:58:19 2003 CST
 .IP \fBSMARTD_TFIRSTEPOCH\fP 4
 is an integer, which is the unix epoch (number of seconds since Jan 1,
@@ -1188,7 +1153,6 @@ SMARTD_SUBJECT and SMARTD_FULLMESSAGE
 .\"! SMARTD_SUBJECT, SMARTD_FULLMSGFILE and SMARTD_ADDRCSV
 .\" %ENDIF OS Windows
 are set by the script before running the executable.
-
 .TP
 .B \-f
 [ATA only] Check for \'failure\' of any Usage Attributes.  If these
@@ -1618,4 +1582,4 @@ full path of this file.
 \fBmail\fP(1), \fBregex\fP(7).
 
 .SH SVN ID OF THIS PAGE
-$Id: smartd.conf.5.in 3964 2014-07-19 19:59:51Z chrfranke $
+$Id: smartd.conf.5.in 3965 2014-07-20 14:46:41Z chrfranke $
