@@ -1,4 +1,9 @@
-$Id: ChangeLog 3964 2014-07-19 19:59:51Z chrfranke $
+$Id: ChangeLog 3965 2014-07-20 14:46:41Z chrfranke $
+
+2014-07-20  Christian Franke  <franke@computer.org>
+
+	smartctl.8.in, smartd.8.in, smartd.conf.5.in:
+	Fix usage of line breaks and empty lines.
 
 2014-07-19  Christian Franke  <franke@computer.org>
 
